--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "moxer-icons",
 	"displayName": "Moxer Icons",
 	"description": "Moxer Icons, the epic icons companion for Moxer Theme",
-	"version": "0.1.0",
+	"version": "0.2.0",
 	"publisher": "Equinusocio",
 	"license": "Apache-2.0",
 	"author": "Mattia Astorino [@equinusocio]",
@@ -11,7 +11,9 @@
 		"vscode": ">=1.36.0"
 	},
 	"preview": true,
-	"extensionPack": ["equinusocio.moxer-theme"],
+	"extensionPack": [
+		"equinusocio.moxer-theme"
+	],
 	"homepage": "https://github.com/moxer-theme/moxer-icons-code",
 	"repository": {
 		"type": "git",
@@ -42,11 +44,13 @@
 	"extensionKind": "ui",
 	"main": "./build/moxer-icons.json",
 	"contributes": {
-		"iconThemes": [{
-			"id": "moxer-icons",
-			"label": "Moxer Icons",
-			"path": "./build/moxer-icons.json"
-		}]
+		"iconThemes": [
+			{
+				"id": "moxer-icons",
+				"label": "Moxer Icons",
+				"path": "./build/moxer-icons.json"
+			}
+		]
 	},
 	"scripts": {
 		"lint": "tslint --fix -c tslint.json 'src/**/*.ts'",
