--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "moxer-icons",
 	"displayName": "Moxer Icons",
 	"description": "Moxer Icons, the epic icons companion for Moxer Theme",
-	"version": "0.3.0",
+	"version": "0.4.0",
 	"publisher": "Equinusocio",
 	"license": "Apache-2.0",
 	"author": "Mattia Astorino [@equinusocio]",
@@ -41,11 +41,13 @@
 	"extensionKind": "ui",
 	"main": "./build/moxer-icons.json",
 	"contributes": {
-		"iconThemes": [{
-			"id": "moxer-icons",
-			"label": "Moxer Icons",
-			"path": "./build/moxer-icons.json"
-		}]
+		"iconThemes": [
+			{
+				"id": "moxer-icons",
+				"label": "Moxer Icons",
+				"path": "./build/moxer-icons.json"
+			}
+		]
 	},
 	"scripts": {
 		"lint": "tslint --fix -c tslint.json 'src/**/*.ts'",
