--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,6 +1,4 @@
 # These are supported funding model platforms
-
-github: [equinusocio]
-#patreon: # Replace with a single Patreon username
+patreon: equinusocio
 #open_collective: # Replace with a single Open Collective username
 
