--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,5 +1,5 @@
 # These are supported funding model platforms
 patreon: equinusocio
-github: equinusocio
+github: [equinusocio]
 #open_collective: # Replace with a single Open Collective username
 
