--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "moxer-icons",
 	"displayName": "Moxer Icons",
 	"description": "Moxer Icons, the epic icons companion for Moxer Theme",
-	"version": "5.2.0",
+	"version": "5.3.0",
 	"publisher": "Equinusocio",
 	"license": "Apache-2.0",
 	"author": "Mattia Astorino [@equinusocio]",
@@ -38,7 +38,9 @@
 	"activationEvents": [
 		"*"
 	],
-	"extensionKind": ["ui"],
+	"extensionKind": [
+		"ui"
+	],
 	"main": "./build/moxer-icons.json",
 	"contributes": {
 		"iconThemes": [
