--- a/.vscodeignore
+++ b/.vscodeignore
@@ -3,14 +3,16 @@
 **/*.map
 .github
 .gitignore
+.gulp
 .vscode/**
+assets/
+gulpfile.babel.ts
 node_modules
 out/test/**
 src/**
 test/**
 tsconfig.json
 typings/**
+vsc-extension-quickstart.md
+package-lock.lock
 yarn.lock
-assets/
-build/LICENSE
-build/README.md
