--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "moxer-icons",
 	"displayName": "Moxer Icons",
 	"description": "Moxer Icons, the epic icons companion for Moxer Theme",
-	"version": "5.9.4",
+	"version": "5.9.3",
 	"publisher": "Equinusocio",
 	"license": "Apache-2.0",
 	"author": "Mattia Astorino [@equinusocio]",
@@ -41,7 +41,7 @@
 	"extensionKind": [
 		"ui"
 	],
-	"main": "./README.md",
+	"main": "./build/moxer-icons.json",
 	"contributes": {
 		"iconThemes": [
 			{
