feat: add new elixir icon for eex and heex extensions

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,13 +1,18 @@
 {
 	"version": "2.0.0",
-	"command": "yarn",
-	"type": "shell",
-	"presentation": {
-		"reveal": "always"
-	},
-	"tasks": [{
-		"group": "build",
-		"label": "build",
-		"args": ["build"]
-	}]
-}
+	"tasks": [
+	  {
+		 "args": [
+			"run",
+			"build"
+		 ],
+		 "command": "npm",
+		 "label": "build",
+		 "group": {
+			"kind": "build",
+			"isDefault": true
+		 }
+	  }
+	]
+ }
+
