--- a/package.json
+++ b/package.json
@@ -51,8 +51,8 @@
 	},
 	"scripts": {
 		"lint": "tslint --fix -c tslint.json 'src/**/*.ts'",
-		"precommit": "yarn lint",
-		"prebuild": "rm -rf build && tsc src/index.ts && yarn copy:icons",
+		"precommit": "run-s lint",
+		"prebuild": "rm -rf build && tsc src/index.ts && run-s copy:icons",
 		"build": "node src/index.js",
 		"copy:icons": "mkdir -p build/svgs && cp -R src/svgs build",
 		"release": "git pull && standard-version --sign --release-as minor && git push --follow-tags",
@@ -62,6 +62,7 @@
 	"devDependencies": {
 		"@types/fs-extra": "8.0.1",
 		"@types/node": "^13.1.6",
+		"npm-run-all": "4.1.5",
 		"tslint": "5.18.0",
 		"tslint-config-prettier": "1.18.0",
 		"typescript": "3.3.1",
